# TempOCR_FastSheetAnswer

./: .gitignore  app.py  initialize.sh  main.py  model_handler.py  pyproject.toml
